code source du rapport sous Latex

--- a/rapport.tex
+++ b/rapport.tex
@@ -15,8 +15,10 @@
 \renewcommand{\appendixtocname}{Annexe}
 \renewcommand{\appendixname}{{\sffamily Annexe}}
 
+
 \begin{document}
 
+//La page de garde
 \begin{center}
 \vspace{\stretch{2}}
 {\Large {\bf Université de Saint-Quentin-en-Yvelines}}\\
@@ -45,16 +47,16 @@ M$^{r}$. \textsc{Mohammed Salah} IBNAMAR  & Encadreur    \\
 \end{tabular}
 }\\
 \vspace{\stretch{0.5}}
-
 {\Large\textbf{\textit{ Année 2019-2020}}}
 \end{center}
 
+
+//La table des matière
 \tableofcontents
+
 
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
-
-
 
 
 \chapter{Définitions et Généralités}
@@ -65,13 +67,16 @@ M$^{r}$. \textsc{Mohammed Salah} IBNAMAR  & Encadreur    \\
 \section{Conversion des images}
 \section{Détection de bords}
 
+
 \chapter{Entrainement du réseau de Neurones}
 \section{Poids et fonction d'activation}
 \section{Gradient de descente}
 
+
 \chapter{Test du réseau de Neurones}
 \section{Classification d'images}
 \section{Evaluation des mauvaises classifications}
+
 
 \chapter{Organisation du travail}
 Le travail s’est fait essentiellement ensemble et de manière progressive.\\
@@ -91,18 +96,12 @@ Pour la rédaction du rapport on s'est servit du Latex, qui est l'un des meilleu
 On a également utiliser Github, la ou on a créé notre organisation qu'on a nommée: Artificial-Breast-Cancer-Detection, a partir de laquelle on a fait nos branche afin que chacun travaille de son coté et puisse avancer sans toucher a la branche principale qui est par défaut la branche master. 
 
 
-
-
-
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
 
 
-
 \chapter*{Références bibliographiques}
 \addcontentsline{toc}{chapter}{Références bibliographiques}
-
-
 
 
 \end{document}
