code source du rapport sous Latex

--- a/rapport.tex
+++ b/rapport.tex
@@ -78,26 +78,31 @@ M$^{r}$. \textsc{Mohammed Salah} IBNAMAR  & Encadreur    \\
 \section{Evaluation des mauvaises classifications}
 
 
-\chapter{Organisation du travail}
+\chapter*{Conclusion}
+\addcontentsline{toc}{chapter}{Conclusion}
+
+
+\chapter*{Organisation du travail}
+\addcontentsline{toc}{chapter}{Organisation du travail}
 Le travail s’est fait essentiellement ensemble et de manière progressive.\\
+
 Tout d’abord, notre encadreur M$^{r}$. \textsc{Mohammed Salah} IBNAMAR  nous a expliqué notre projet et ses objectifs et surtout son importance dans la vie active.\\
-On se rencontrait des fois pour voir l'avancement  du travail et s'aider entre nous, envoyer notre travail a notre encadreur afin de l'améliorer en corrigeant nos erreurs. Et c'est dans ce cadre, que nous avons généré les différents codes:
+
+On se rencontrait des fois pour voir l'avancement  du travail et s'aider entre nous, envoyer notre travail a notre encadreur afin de l'améliorer en corrigeant nos erreurs. Et c'est dans ce cadre, que nous avons généré les différents codes:\\
 \begin{itemize}
       \item [\star] Le code pour convertir les images en noir et blanc.
       \item [\star] Le code de la détection des bords des images.
-      \item [\star] Le code de réseau de Neurones.
+      \item [\star] Le code de réseau de Neurones.\\
     \end{itemize}
+    
 Vers la fin, il a fallu se partager le travail afin d’être dans le temps. Certains se sont concentrés sur la recherche de la documentations, l'utilisation de Github, sur la programmation en C et d’autre sur Latex pour la rédaction du rapport.
 
 \section{Les outils utilisés}
 La programmation des différents codes pour la détection du cancer de notre projet est faite en langage C.\\
+
 Pour la rédaction du rapport on s'est servit du Latex, qui est l'un des meilleur langage et un système de composition de documents.\\
 
 On a également utiliser Github, la ou on a créé notre organisation qu'on a nommée: Artificial-Breast-Cancer-Detection, a partir de laquelle on a fait nos branche afin que chacun travaille de son coté et puisse avancer sans toucher a la branche principale qui est par défaut la branche master. 
-
-
-\chapter*{Conclusion}
-\addcontentsline{toc}{chapter}{Conclusion}
 
 
 \chapter*{Références bibliographiques}
