code source de la diapositive sous Latex final

--- a/diap.tex
+++ b/diap.tex
@@ -244,6 +244,87 @@ de côté ne se chevauchant pas (pooling).
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+## Exemple 
+### Exemple de traitement d'image
+ 
+   
+   \begin{figure}[!htbp]
+\begin{center}
+\includegraphics[width=
+9cm,height=3.5cm]{p1.png}
+\end{center}
+\end{figure}
+
+\end{frame}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+### Exemple de traitement d'image
+ 
+   
+   \begin{figure}[!htbp]
+\begin{center}
+\includegraphics[width=
+9cm,height=3.5cm]{p2.png}
+\end{center}
+\end{figure}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+### Exemple de traitement d'image
+ 
+   
+   \begin{figure}[!htbp]
+\begin{center}
+\includegraphics[width=
+9cm,height=3.5cm]{p3.png}
+\end{center}
+\end{figure}
+
+\end{frame}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+### Exemple de traitement d'image
+ 
+   
+   \begin{figure}[!htbp]
+\begin{center}
+\includegraphics[width=
+9cm,height=3.5cm]{p5.png}
+\end{center}
+\end{figure}
+
+\end{frame}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+### Exemple de traitement d'image
+ 
+   
+   \begin{figure}[!htbp]
+\begin{center}
+\includegraphics[width=
+9cm,height=3.5cm]{p6.png}
+\end{center}
+\end{figure}
+
+\end{frame}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 #Pre-processing des images
@@ -259,7 +340,7 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
      \begin{figure}[!htbp]
 \begin{center}
 \includegraphics[width=
-9.5cm,height=3.5cm]{11.png}
+9.5cm,height=3cm]{11.png}
 \end{center}
 \end{figure}
    
@@ -291,7 +372,7 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
     
 \begin{figure}[!htbp]
 \begin{center}
-\includegraphics[width=3cm,height=3cm]{sans1.png}
+\includegraphics[width=1.5cm,height=1.5cm]{sans1.png}
 \caption{Image après l'application du filtre de Sobel}
 \end{center}
 \end{figure}
@@ -309,7 +390,7 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
     
 \begin{figure}[!htbp]
 \begin{center}
-\includegraphics[width=3cm,height=3cm]{sans3.png}
+\includegraphics[width=1.5cm,height=1.5cm]{sans3.png}
 \caption{Image après l'application du filtre de Kirsch}
 \end{center}
 \end{figure}
@@ -327,7 +408,7 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
     
 \begin{figure}[!htbp]
 \begin{center}
-\includegraphics[width=3cm,height=3cm]{sans4.png}
+\includegraphics[width=1.5cm,height=1.5cm]{sans4.png}
 \caption{Image après l'application du filtre de Prewitt}
 \end{center}
 \end{figure}
@@ -355,12 +436,10 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
 
 ###Back-propagation
  
-\begin{figure}[!htbp]
-\begin{center}
-\includegraphics[width=
-7.5cm,height=4.5cm]{8.png}
-\end{center}
-\end{figure}
+ \begin{itemize}
+    \item [\star]  PROPAGATION DE LA PERTE TOTALE
+    \item [\star]  MISE À JOUR DES POIDS
+     \end{itemize}    
   
 
 \end{frame}
@@ -389,9 +468,8 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
  
 
    \begin{itemize}
-    \item [\star] PEU COÛTEUX ET DISPOSE DE BONNES PROPRIÉTÉS.
-    \item [\star]  ATTRIBUTION DES POIDS.
     \item [\star]  MINIMISATION DE L’ERREUR
+    \item [\star] PEU COÛTEUX ET DISPOSE DE BONNES PROPRIÉTÉS.
      \end{itemize}    
 
 \end{frame}
@@ -459,21 +537,25 @@ en Grayscale permettra de bien appliquer les filtres aux images. Ainsi que bien 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
-#Conclusion
+#Résultat et conclusion
 
-### Conclusion
+### Résultat
 
-   \begin{itemize}
-   \item [\star]  Nous avons réussi à coder un réseau de neurones qui marche c’est à dire qu’il nous donne
-des résultats. Cependant on peut encore l’améliorer pour avoir par exemple le nombre de fois
-où on a des mauvaises classifications ce qu’on a pas réussi à faire à cause de l’architecture du
-code de test. \pause
-    \item [\star] En conclusion on peut dire que l’objectif est atteint à savoir avoir un réseau de neurones
-qui fait la classication des images de cancer du sein mais on pourrait encore l’améliorer.
-     \end{itemize}    
-    
+   
+\begin{figure}[!htbp]
+\begin{center}
+\includegraphics[width=
+9cm,height=4.5cm]{r.png}
+\end{center}
+\end{figure}
+
 
 \end{frame}
+
+
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
