code source Latex du 2 ème semestre

--- a/rapport_S2.tex
+++ b/rapport_S2.tex
@@ -19,7 +19,6 @@
 \begin{document}
 
 
-
 \begin{center}
 \begin{figure}[!htbp]
 \begin{center}
@@ -74,6 +73,9 @@ M$^{r}$. \textsc{Mohammed Salah} IBNAMAR  & Encadreur    \\
 
 
 \chapter{Chapitre 03}
+
+
+\chapter{Chapitre 04}
 
 
 \chapter*{Conclusion}
